--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
 		"cf-typegen": "wrangler types"
 	},
 	"dependencies": {
+		"@mui/material": "^6.0.0",
+		"@mui/icons-material": "^6.0.0",
+		"@emotion/react": "^11.11.0",
+		"@emotion/styled": "^11.11.0",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1"
 	},
