--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
 		"cf-typegen": "wrangler types"
 	},
 	"dependencies": {
-		"@mui/material": "^6.0.0",
-		"@mui/icons-material": "^6.0.0",
 		"@emotion/react": "^11.11.0",
 		"@emotion/styled": "^11.11.0",
+		"@mui/icons-material": "^6.0.0",
+		"@mui/material": "^6.0.0",
 		"react": "^19.1.1",
 		"react-dom": "^19.1.1"
 	},
 	"devDependencies": {
+		"@cloudflare/workers-types": "^4.20251205.0",
 		"@eslint/js": "^9.33.0",
 		"@types/react": "^19.1.10",
 		"@types/react-dom": "^19.1.7",
